// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTheme allows adding in custom theme properties 1`] = `
Object {
  "alpha": Object {
    "high": 0.9,
    "low": 0.4,
    "medium": 0.5,
  },
  "barStyle": "dark-content",
  "breakpoints": Object {
    "lg": 1200,
    "md": 800,
    "sm": 496,
    "xs": 320,
  },
  "buttons": Object {
    "alert": Object {
      "accent": "#FFFFFF",
      "fill": "#c64f55",
    },
    "default": Object {
      "accent": "#27272E",
      "fill": "#A5A5A5",
    },
    "ghost": Object {
      "accent": "#27272E",
      "fill": "#27272E",
    },
    "overlay": Object {
      "accent": "#FFFFFF",
      "fill": "rgba(255, 255, 255, 0.4)",
    },
    "primary": Object {
      "accent": "#FFFFFF",
      "fill": "#00676D",
    },
    "secondary": Object {
      "accent": "#FFFFFF",
      "fill": "#17B582",
    },
    "tertiary": Object {
      "accent": "#FFFFFF",
      "fill": "#6EC5B8",
    },
  },
  "colors": Object {
    "action": Object {
      "default": "#A5A5A5",
      "primary": "#00676D",
      "secondary": "#17B582",
      "tertiary": "#6EC5B8",
    },
    "alert": "#c64f55",
    "background": Object {
      "accent": "rgba(165, 165, 165, 0.5)",
      "inactive": "#A5A5A5",
      "paper": "#FFFFFF",
      "screen": "rgb(249, 249, 251)",
      "secondary": "#FFFFFF",
      "system": "rgba(142, 142, 147, 0.2)",
      "system2": "rgba(142, 142, 147, 0.16)",
      "system3": "rgba(142, 142, 147, 0.12)",
      "system4": "rgba(142, 142, 147, 0.08)",
    },
    "black": "#000000",
    "darkPrimary": "#27272E",
    "darkSecondary": "#505050",
    "darkTertiary": "#A5A5A5",
    "gray": "#8E8E93",
    "lightPrimary": "#F4F7F8",
    "lightSecondary": "#DBDBD9",
    "lightTertiary": "#A5A5A5",
    "neutral": Object {
      "gray": "#8E8E93",
      "gray2": "#AFAFB3",
      "gray3": "#C7C7CC",
      "gray4": "#D1D1D6",
      "gray5": "#E5E5EA",
      "gray6": "#F2F2F7",
    },
    "paper": "#FFFFFF",
    "primary": "#00676D",
    "screen": "rgb(249, 249, 251)",
    "secondary": "#17B582",
    "shadows": Object {
      "default": "rgba(0, 0, 0, 0.09999999999999998)",
    },
    "success": "#17B569",
    "tertiary": "#6EC5B8",
    "text": Object {
      "action": "#17B582",
      "link": "#17B582",
      "placeholder": "rgba(229, 229, 234, 0.3)",
      "primary": "#27272E",
      "quaternary": "rgba(39, 39, 46, 0.18)",
      "secondary": "rgba(39, 39, 46, 0.6)",
      "tertiary": "rgba(39, 39, 46, 0.3)",
    },
    "transparent": "transparent",
    "warning": "#F4B740",
    "white": "#FFFFFF",
    "wordOfChrist": "#8b0000",
  },
  "helpers": Object {
    "rem": [Function],
    "verticalRhythm": [Function],
  },
  "overlays": Object {
    "background-gradient": [Function],
    "default": [Function],
    "featured": [Function],
    "gradient-bottom": [Function],
    "gradient-top": [Function],
    "high": [Function],
    "low": [Function],
    "medium": [Function],
  },
  "overrides": Object {
    "MyComponent": Object {
      "some": "style",
    },
  },
  "shadows": Object {
    "default": Object {
      "android": Object {
        "elevation": 5,
      },
      "ios": Object {
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
    },
    "none": Object {
      "android": Object {
        "elevation": 0,
      },
      "ios": Object {
        "shadowOpacity": 0,
      },
    },
  },
  "sizing": Object {
    "avatar": Object {
      "large": 120,
      "medium": 80,
      "small": 40,
    },
    "baseBorderRadius": 16,
    "baseUnit": 16,
  },
  "type": "light",
  "types": Object {
    "dark": Object {
      "barStyle": "light-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#FFFFFF",
          "screen": "rgb(249, 249, 251)",
          "secondary": "rgba(165, 165, 165, 0.5)",
          "system": "rgba(99, 99, 102, 0.36)",
          "system2": "rgba(99, 99, 102, 0.32)",
          "system3": "rgba(99, 99, 102, 0.24)",
          "system4": "rgba(99, 99, 102, 0.18)",
        },
        "neutral": Object {
          "gray": "#8E8E93",
          "gray2": "#636366",
          "gray3": "#636366",
          "gray4": "#3A3A3C",
          "gray5": "#2C2C2E",
          "gray6": "#1C1C1E",
        },
        "paper": "#FFFFFF",
        "screen": "rgb(249, 249, 251)",
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "action": "#17B582",
          "link": "#17B582",
          "placeholder": "rgba(244, 247, 248, 0.3)",
          "primary": "#F4F7F8",
          "quaternary": "rgba(244, 247, 248, 0.18)",
          "secondary": "rgba(244, 247, 248, 0.6)",
          "tertiary": "rgba(244, 247, 248, 0.33)",
        },
      },
    },
    "light": Object {
      "barStyle": "dark-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#FFFFFF",
          "screen": "rgb(249, 249, 251)",
          "secondary": "#FFFFFF",
          "system": "rgba(142, 142, 147, 0.2)",
          "system2": "rgba(142, 142, 147, 0.16)",
          "system3": "rgba(142, 142, 147, 0.12)",
          "system4": "rgba(142, 142, 147, 0.08)",
        },
        "neutral": Object {
          "gray": "#8E8E93",
          "gray2": "#AFAFB3",
          "gray3": "#C7C7CC",
          "gray4": "#D1D1D6",
          "gray5": "#E5E5EA",
          "gray6": "#F2F2F7",
        },
        "paper": "#FFFFFF",
        "screen": "rgb(249, 249, 251)",
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "action": "#17B582",
          "link": "#17B582",
          "placeholder": "rgba(229, 229, 234, 0.3)",
          "primary": "#27272E",
          "quaternary": "rgba(39, 39, 46, 0.18)",
          "secondary": "rgba(39, 39, 46, 0.6)",
          "tertiary": "rgba(39, 39, 46, 0.3)",
        },
      },
    },
  },
  "typography": Object {
    "baseFontSize": 16,
    "baseLineHeight": 24,
    "sans": Object {
      "black": Object {
        "default": "InterUI-Black",
        "italic": "InterUI-BlackItalic",
      },
      "bold": Object {
        "default": "InterUI-Bold",
        "italic": "InterUI-BoldItalic",
      },
      "medium": Object {
        "default": "InterUI-Medium",
        "italic": "InterUI-MediumItalic",
      },
      "regular": Object {
        "default": "InterUI-Regular",
        "italic": "InterUI-Italic",
      },
    },
    "serif": Object {
      "bold": Object {
        "default": "DroidSerif-Bold",
        "italic": "DroidSerif-BoldItalic",
      },
      "regular": Object {
        "default": "DroidSerif",
        "italic": "DroidSerif-Italic",
      },
    },
    "ui": Object {
      "regular": "System",
    },
  },
}
`;

exports[`createTheme has a custom colors 1`] = `
Object {
  "action": Object {
    "default": "#A5A5A5",
    "primary": "red",
    "secondary": "#17B582",
    "tertiary": "#6EC5B8",
  },
  "alert": "#c64f55",
  "background": Object {
    "accent": "rgba(165, 165, 165, 0.5)",
    "inactive": "#A5A5A5",
    "paper": "#FFFFFF",
    "screen": "rgb(249, 249, 251)",
    "secondary": "#FFFFFF",
    "system": "rgba(142, 142, 147, 0.2)",
    "system2": "rgba(142, 142, 147, 0.16)",
    "system3": "rgba(142, 142, 147, 0.12)",
    "system4": "rgba(142, 142, 147, 0.08)",
  },
  "black": "#000000",
  "darkPrimary": "#27272E",
  "darkSecondary": "#505050",
  "darkTertiary": "#A5A5A5",
  "gray": "#8E8E93",
  "lightPrimary": "#F4F7F8",
  "lightSecondary": "#DBDBD9",
  "lightTertiary": "#A5A5A5",
  "neutral": Object {
    "gray": "#8E8E93",
    "gray2": "#AFAFB3",
    "gray3": "#C7C7CC",
    "gray4": "#D1D1D6",
    "gray5": "#E5E5EA",
    "gray6": "#F2F2F7",
  },
  "otherColor": "green",
  "paper": "#FFFFFF",
  "primary": "red",
  "screen": "rgb(249, 249, 251)",
  "secondary": "#17B582",
  "shadows": Object {
    "default": "rgba(0, 0, 0, 0.09999999999999998)",
  },
  "success": "#17B569",
  "tertiary": "#6EC5B8",
  "text": Object {
    "action": "#17B582",
    "link": "#17B582",
    "placeholder": "rgba(229, 229, 234, 0.3)",
    "primary": "#27272E",
    "quaternary": "rgba(39, 39, 46, 0.18)",
    "secondary": "rgba(39, 39, 46, 0.6)",
    "tertiary": "rgba(39, 39, 46, 0.3)",
  },
  "transparent": "transparent",
  "warning": "#F4B740",
  "white": "#FFFFFF",
  "wordOfChrist": "#8b0000",
}
`;

exports[`createTheme has custom typography 1`] = `
Object {
  "baseFontSize": "24",
  "baseLineHeight": 24,
  "otherProp": true,
  "sans": Object {
    "black": Object {
      "default": "InterUI-Black",
      "italic": "InterUI-BlackItalic",
    },
    "bold": Object {
      "default": "InterUI-Bold",
      "italic": "InterUI-BoldItalic",
    },
    "medium": Object {
      "default": "InterUI-Medium",
      "italic": "InterUI-MediumItalic",
    },
    "regular": Object {
      "default": "InterUI-Regular",
      "italic": "InterUI-Italic",
    },
  },
  "serif": Object {
    "bold": Object {
      "default": "DroidSerif-Bold",
      "italic": "DroidSerif-BoldItalic",
    },
    "regular": Object {
      "default": "DroidSerif",
      "italic": "DroidSerif-Italic",
    },
  },
  "ui": Object {
    "regular": "System",
  },
}
`;

exports[`createTheme switches to a dark theme 1`] = `
Object {
  "alpha": Object {
    "high": 0.9,
    "low": 0.4,
    "medium": 0.5,
  },
  "barStyle": "light-content",
  "breakpoints": Object {
    "lg": 1200,
    "md": 800,
    "sm": 496,
    "xs": 320,
  },
  "buttons": Object {
    "alert": Object {
      "accent": "#FFFFFF",
      "fill": "#c64f55",
    },
    "default": Object {
      "accent": "#F4F7F8",
      "fill": "#A5A5A5",
    },
    "ghost": Object {
      "accent": "#F4F7F8",
      "fill": "#F4F7F8",
    },
    "overlay": Object {
      "accent": "#FFFFFF",
      "fill": "rgba(255, 255, 255, 0.4)",
    },
    "primary": Object {
      "accent": "#FFFFFF",
      "fill": "#00676D",
    },
    "secondary": Object {
      "accent": "#FFFFFF",
      "fill": "#17B582",
    },
    "tertiary": Object {
      "accent": "#FFFFFF",
      "fill": "#6EC5B8",
    },
  },
  "colors": Object {
    "action": Object {
      "default": "#A5A5A5",
      "primary": "#00676D",
      "secondary": "#17B582",
      "tertiary": "#6EC5B8",
    },
    "alert": "#c64f55",
    "background": Object {
      "accent": "rgba(165, 165, 165, 0.5)",
      "inactive": "#A5A5A5",
      "paper": "#FFFFFF",
      "screen": "rgb(249, 249, 251)",
      "secondary": "rgba(165, 165, 165, 0.5)",
      "system": "rgba(99, 99, 102, 0.36)",
      "system2": "rgba(99, 99, 102, 0.32)",
      "system3": "rgba(99, 99, 102, 0.24)",
      "system4": "rgba(99, 99, 102, 0.18)",
    },
    "black": "#000000",
    "darkPrimary": "#27272E",
    "darkSecondary": "#505050",
    "darkTertiary": "#A5A5A5",
    "gray": "#8E8E93",
    "lightPrimary": "#F4F7F8",
    "lightSecondary": "#DBDBD9",
    "lightTertiary": "#A5A5A5",
    "neutral": Object {
      "gray": "#8E8E93",
      "gray2": "#636366",
      "gray3": "#636366",
      "gray4": "#3A3A3C",
      "gray5": "#2C2C2E",
      "gray6": "#1C1C1E",
    },
    "paper": "#FFFFFF",
    "primary": "#00676D",
    "screen": "rgb(249, 249, 251)",
    "secondary": "#17B582",
    "shadows": Object {
      "default": "rgba(0, 0, 0, 0.09999999999999998)",
    },
    "success": "#17B569",
    "tertiary": "#6EC5B8",
    "text": Object {
      "action": "#17B582",
      "link": "#17B582",
      "placeholder": "rgba(244, 247, 248, 0.3)",
      "primary": "#F4F7F8",
      "quaternary": "rgba(244, 247, 248, 0.18)",
      "secondary": "rgba(244, 247, 248, 0.6)",
      "tertiary": "rgba(244, 247, 248, 0.33)",
    },
    "transparent": "transparent",
    "warning": "#F4B740",
    "white": "#FFFFFF",
    "wordOfChrist": "#8b0000",
  },
  "helpers": Object {
    "rem": [Function],
    "verticalRhythm": [Function],
  },
  "overlays": Object {
    "background-gradient": [Function],
    "default": [Function],
    "featured": [Function],
    "gradient-bottom": [Function],
    "gradient-top": [Function],
    "high": [Function],
    "low": [Function],
    "medium": [Function],
  },
  "overrides": Object {},
  "shadows": Object {
    "default": Object {
      "android": Object {
        "elevation": 5,
      },
      "ios": Object {
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
    },
    "none": Object {
      "android": Object {
        "elevation": 0,
      },
      "ios": Object {
        "shadowOpacity": 0,
      },
    },
  },
  "sizing": Object {
    "avatar": Object {
      "large": 120,
      "medium": 80,
      "small": 40,
    },
    "baseBorderRadius": 16,
    "baseUnit": 16,
  },
  "type": "dark",
  "types": Object {
    "dark": Object {
      "barStyle": "light-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#FFFFFF",
          "screen": "rgb(249, 249, 251)",
          "secondary": "rgba(165, 165, 165, 0.5)",
          "system": "rgba(99, 99, 102, 0.36)",
          "system2": "rgba(99, 99, 102, 0.32)",
          "system3": "rgba(99, 99, 102, 0.24)",
          "system4": "rgba(99, 99, 102, 0.18)",
        },
        "neutral": Object {
          "gray": "#8E8E93",
          "gray2": "#636366",
          "gray3": "#636366",
          "gray4": "#3A3A3C",
          "gray5": "#2C2C2E",
          "gray6": "#1C1C1E",
        },
        "paper": "#FFFFFF",
        "screen": "rgb(249, 249, 251)",
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "action": "#17B582",
          "link": "#17B582",
          "placeholder": "rgba(244, 247, 248, 0.3)",
          "primary": "#F4F7F8",
          "quaternary": "rgba(244, 247, 248, 0.18)",
          "secondary": "rgba(244, 247, 248, 0.6)",
          "tertiary": "rgba(244, 247, 248, 0.33)",
        },
      },
    },
    "light": Object {
      "barStyle": "dark-content",
      "colors": Object {
        "action": Object {
          "default": "#A5A5A5",
          "primary": "#00676D",
          "secondary": "#17B582",
          "tertiary": "#6EC5B8",
        },
        "background": Object {
          "accent": "rgba(165, 165, 165, 0.5)",
          "inactive": "#A5A5A5",
          "paper": "#FFFFFF",
          "screen": "rgb(249, 249, 251)",
          "secondary": "#FFFFFF",
          "system": "rgba(142, 142, 147, 0.2)",
          "system2": "rgba(142, 142, 147, 0.16)",
          "system3": "rgba(142, 142, 147, 0.12)",
          "system4": "rgba(142, 142, 147, 0.08)",
        },
        "neutral": Object {
          "gray": "#8E8E93",
          "gray2": "#AFAFB3",
          "gray3": "#C7C7CC",
          "gray4": "#D1D1D6",
          "gray5": "#E5E5EA",
          "gray6": "#F2F2F7",
        },
        "paper": "#FFFFFF",
        "screen": "rgb(249, 249, 251)",
        "shadows": Object {
          "default": "rgba(0, 0, 0, 0.09999999999999998)",
        },
        "text": Object {
          "action": "#17B582",
          "link": "#17B582",
          "placeholder": "rgba(229, 229, 234, 0.3)",
          "primary": "#27272E",
          "quaternary": "rgba(39, 39, 46, 0.18)",
          "secondary": "rgba(39, 39, 46, 0.6)",
          "tertiary": "rgba(39, 39, 46, 0.3)",
        },
      },
    },
  },
  "typography": Object {
    "baseFontSize": 16,
    "baseLineHeight": 24,
    "sans": Object {
      "black": Object {
        "default": "InterUI-Black",
        "italic": "InterUI-BlackItalic",
      },
      "bold": Object {
        "default": "InterUI-Bold",
        "italic": "InterUI-BoldItalic",
      },
      "medium": Object {
        "default": "InterUI-Medium",
        "italic": "InterUI-MediumItalic",
      },
      "regular": Object {
        "default": "InterUI-Regular",
        "italic": "InterUI-Italic",
      },
    },
    "serif": Object {
      "bold": Object {
        "default": "DroidSerif-Bold",
        "italic": "DroidSerif-BoldItalic",
      },
      "regular": Object {
        "default": "DroidSerif",
        "italic": "DroidSerif-Italic",
      },
    },
    "ui": Object {
      "regular": "System",
    },
  },
}
`;

exports[`createTheme throws an error for an unsupported theme type 1`] = `"The theme type boom is not supported"`;
